[package]
name = "olmmcc"
version = "0.1.0"
authors = ["Justus Croskery <justus@olmmcc.tk>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "17.0.0"
threadpool = "1.7.1"
serde_json = "1.0.47"
chrono = "0.4.10"
scrypt = "0.2.0"
rand = "0.7.3"
num_cpus = "1.12.0"
regex = "1.3.4"
session = { git = "https://github.com/Somebody62/session" }
gmail = { git = "https://github.com/Somebody62/gmail" }

[dependencies.serde]
version = "1.0.104"
default-features = false
features = ["derive"]
