[package]
name = "olmmcc"
version = "0.1.0"
authors = ["Justus Croskery <justus@olmmcc.tk>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.57"
hyper = "0.14.10"
tokio = { version = "0.2.22", features = ["full"] }
chrono = "0.4.15"
scrypt = "0.4.0"
rand = "0.7.3"
session = { git = "https://github.com/Somebody62/session" }
gmail = { git = "https://github.com/Somebody62/gmail" }
mysql = { git = "https://github.com/Somebody62/mysql" }

[dependencies.serde]
version = "1.0.115"
default-features = false
features = ["derive"]
